--- a/web/css/site.css
+++ b/web/css/site.css
@@ -90,26 +90,13 @@ a.desc:after {
     margin: 0 0 15px 0;
 }
 
-/* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
-    border: none;
+.dropdown-menu button.logout {
+    padding: 0;
+    color: #333333;
+    width: 100%;
+    text-align: left;
 }
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
-}
-
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
-}
-
-.nav > li > form > button.logout:focus {
-    outline: none;
+.dropdown-menu button.logout:hover {
+    color: #333333;
 }
